Fix bug on input:focus that reset left margin to 0 on mobile

--- a/vampire-chats/public/src/styles/style.css
+++ b/vampire-chats/public/src/styles/style.css
@@ -15,9 +15,10 @@ h2 {
 	list-style-type: none;
 	margin-right: 40px;
 }
+select, textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"] { font-size: 16px; }
 
 input[type=text] {
-	margin-left: 40px;	
+	margin-left: 40px;
 }
 
 input[value] {
@@ -26,4 +27,20 @@ input[value] {
 
 button[type=submit] {
 	margin-left: 40px;	
+}
+
+/* Portrait and Landscape for Mobile*/
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 667px) 
+  and (-webkit-min-device-pixel-ratio: 0) { 
+
+  	body {
+  		margin-left: 40px;
+  	}
+
+	  input:focus {
+	  	
+	    font-size: 16px;
+	  }
 }
